--- a/README.asciidoc
+++ b/README.asciidoc
@@ -29,7 +29,7 @@ wait on the same future that is executing for the initial/first request for the 
 = Build Status
 
 ### Status
-[![Build Status](https://travis-ci.org/tootedom/herdcache.png)](https://travis-ci.org/tootedom/herdcache)
+![Build Status](https://travis-ci.org/tootedom/herdcache.png)](https://travis-ci.org/tootedom/herdcache)
 
 = Usage
 
