--- a/README.asciidoc
+++ b/README.asciidoc
@@ -28,7 +28,7 @@ wait on the same future that is executing for the initial/first request for the 
 
 = Build Status
 
-[![Build Status](https://travis-ci.org/tootedom/herdcache.png)](https://travis-ci.org/tootedom/herdcache)
+image::https://travis-ci.org/tootedom/herdcache.png[Build Status]
 
 = Usage
 
